IDE integrated, paths defined backend table updates

--- a/templates/polls/static_react.html
+++ b/templates/polls/static_react.html
@@ -7,7 +7,7 @@
   <body>
     <!-- <h1>Getting Started with Django and Webpack</h1> -->
     <div id="root" />
-    {% csrf_token %} {{ form }}
+    <!-- {% csrf_token %} {{ form }} -->
     <script
       src="{% static 'js/index-bundle.js' %}"
       type="text/javascript"
